--- a/wiki/Sutil2501.wiki
+++ b/wiki/Sutil2501.wiki
@@ -8,34 +8,62 @@ Tracker Issues Fixed
 
 = Detalhes =
 
-Category Summary Link 
-27842 Batch processing broken Administration 
-27844 Version Module for Admin to show Joomla version in Footer admin Template Administration 
-27868 Joomla 1.7.x batch processing allow move items to trashed categories Administration 
-27893 New version module interferes with license notice in Hathor Administration 
-27941 Add warning/no warning icons on Database screen Administration 
-27818 Update 1.7 strings to 2.5 Code Quality 
-27829 $app variable can possibly not be set causing a PHP error Code Quality 
-26986 Batch processing of articles doesn't work for users with restricted rights Components 
-27581 Basic Search contact search is broken Components 
-27700 com_redirect redirects should use 301 redirect not 303 Components 
-27872 Error in Banner Track Clicks Components 
-27886 An unpublished linked contact leads to articles not being displayed. Components 
-27774 Joomla on Windows Azure - Load time is slow Database 
-27890 mod_menu invalid rendering of items of type alias and url Front End 
-27887 Extension Manager: Database does not fix update problem Installation 
-27895 Version Number Module Not Assigned to Menus Installation 
-27916 Path of home sub-menu items contain "News Feeds" Installation 
-27919 Extension Manager: Database does not fix text filter problem Installation 
-27920 Update SQL query requires temp table permissions Installation 
-27880 Please first make a selection from the lis't: Huge error on 40+ sites Javascript 
-27905 Upgrade MooTools to version 1.4.3 Javascript 
-27796 COM_USERS_FITLER_NOTES Languages 
-27929 *Installing sample data and defining as site lang another lang then English breaks links Languages 
-27864 User profile page does not HTML escape the user's name Layouts 
-27873 The related articles modules (mod_related_items) are not showing Modules 
-27896 mod_search head search link title not escaped Modules 
-27662 Can't update #__update_sites table at extension install on SQL Server Plugins 
-27862 Code error plgUserProfile line 188 Plugins 
-27885 TinyMCE settings in SQL don't reflect recent changes in options. SQL Files 
-27938 labels missing for Smart Search / Finder module  Templates 
+Summary - Link 
+
+Batch processing broken - Administration
+
+Version Module for Admin to show Sutil! version in Footer admin - Template Administration
+
+Sutil! 1.7.0.x batch processing allow move items to trashed categories  - Administration
+
+New version module interferes with license notice in Hathor - Administration
+
+Add warning/no warning icons on Database screen - Administration
+
+Update 1.7.0 strings to 2.5.0 - Code Quality 
+
+$app variable can possibly not be set causing a PHP error - Code Quality
+
+Batch processing of articles doesn't work for users with restricted rights - Components
+
+Basic Search contact search is broken - Components
+
+com_redirect redirects should use 301 redirect not 303 - Components
+
+Error in Banner Track Clicks - Components
+
+An unpublished linked contact leads to articles not being displayed. - Components
+
+Sutil! on Windows Azure - Load time is slow Database
+
+mod_menu invalid rendering of items of type alias and url - Front End
+
+Extension Manager: Database does not fix update problem - Installation
+
+Version Number Module Not Assigned to Menus - Installation
+
+Path of home sub-menu items contain "News Feeds" - Installation
+
+Extension Manager: Database does not fix text filter problem - Installation
+
+Update SQL query requires temp table permissions - Installation
+
+Please first make a selection from the lis't: Huge error on 40+ sites - Javascript
+
+Upgrade MooTools to version 1.4.3 - Javascript
+
+COM_USERS_FITLER_NOTES - Languages
+
+*Installing sample data and defining as site lang another lang then English breaks links Languages
+
+User profile page does not HTML escape the user's name - Layouts
+
+The related articles modules (mod_related_items) are not showing - Modules
+
+mod_search head search link title not escaped - Modules
+
+Can't update #__update_sites table at extension install on SQL Server - Plugins
+
+Code error plgUserProfile line 188 - Plugins
+
+labels missing for Smart Search / Finder module - Templates
